MEDIUM / add load folders api
